--- a/.github/workflows/release-electron-app.yml
+++ b/.github/workflows/release-electron-app.yml
@@ -223,3 +223,5 @@ jobs:
           NODE_ENV: production
           CI: true
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_LINK: ${{ secrets.CSC_LINK }}
+          CSC_KEY_PASSWORD: ${{ secrets.CSC_KEY_PASSWORD }}
