--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@electron/fuses": "^2.0.0",
+    "@electron/notarize": "^3.1.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.3",
     "@types/tmp": "^0.2.6",
