--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "electron-audio-loopback": "^1.0.6",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "form-data": "^4.0.5",
@@ -53,6 +54,7 @@
     "gray-matter": "^4.0.3",
     "isomorphic-fetch": "^3.0.0",
     "json-schema-to-zod": "^2.6.1",
+    "native-audio-node": "^0.3.5",
     "openai": "^6.16.0",
     "tmp": "^0.2.5",
     "youtube-dl-exec": "^3.0.29"
