--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "better-sqlite3": "^12.5.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "electron-audio-loopback": "^1.0.6",
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "form-data": "^4.0.5",
