update env config

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,11 @@ PORTAL_API_URL=http://localhost:7009/api
 MCP_CALLBACK_PORT=8090
 MCP_AUTH_TIMEOUT_MS=60000
 
+# Azure AD Authentication
 AZURE_ENTRA_APP_CLIENT_ID=your_AZURE_ENTRA_APP_CLIENT_ID_here
 AZURE_TENANT_ID=your_AZURE_TENANT_ID_here
 AZURE_AUTH_SCOPE=User.Read
 AZURE_AUTH_CUSTOM_PROTOCOL=yakshaver-desktop-dev
+
+# Application Insights (Telemetry)
+APPLICATIONINSIGHTS_CONNECTION_STRING=
